--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
